quakey: prevent layout from overlapping with iOS status bar

--- a/src/app/bot/bot.page.scss
+++ b/src/app/bot/bot.page.scss
@@ -4,6 +4,10 @@ ion-content {
 
 ion-header {
   --ion-toolbar-background: #4bb5a2;
+  padding-top: env(safe-area-inset-top);
+  padding-right: env(safe-area-inset-right);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
 }
 
   ion-header::after, [tabsPlacement="top"] > ion-tabbar::after, ion-footer::before, [tabsPlacement="bottom"] > ion-tabbar::before {
